# libslave

./: CMakeLists.txt  Slave.cpp  types.h
test/: CMakeLists.txt
